advanced/security/ssl-tls-https/k8s-mtls-demo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meow-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: meow
